fixed bottom sheet item alignment

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -7588,6 +7588,13 @@ md-autocomplete[disabled] {
   margin-right: auto !important;
   margin-left: auto !important;
 }
+.rp-bottom-sheet md-list md-list-item {
+  -webkit-box-flex: 0 !important;
+  -webkit-flex: 0 !important;
+  -moz-box-flex: 0 !important;
+  -ms-flex: 0 !important;
+  flex: 0 !important;
+}
 .rp-bottom-sheet md-list md-list-item button {
   padding: 8px;
 }
